--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <title>Brandon's Webpage</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Brandon</h1>
+<h2> Ruoff </h2>
+<p> Brandon Christopher Ruoff</p>
+<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 
 </body>
 </html>
