Added mobile formatting

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Brandon's Webpage</title>
-<link rel="stylesheet" href="styles.css">
+	<title>Brandon's Webpage</title>
+	<link rel="stylesheet" href="styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 
-<h1>Brandon</h1>
-<h2> Ruoff </h2>
-<p> Brandon Christopher Ruoff</p>
-<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
+	<h1>Brandon</h1>
+	<h2> Ruoff </h2>
+	<p> Brandon Christopher Ruoff</p>
+	<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 
 </body>
 </html>
