Added more sprites

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
 
 	<h1>Brandon</h1>
-	<h2> Ruoff </h2>
-	<p> Brandon Christopher Ruoff</p>
-	<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
-
+	<h2> Christopher </h2>
+	<h1> Ruoff</h1>
+	<p>
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
+	</p>
 </body>
 </html>
