Centered the site

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
-<body>
+<body class="center-whole">
 
-	<h1>Brandon</h1>
-	<h2> Christopher </h2>
-	<h1> Ruoff</h1>
+	<h1> <span class="blue-bg"> Brandon </span> 
+		<span class="black-bg"> Christopher </span> 
+			<span class="red-bg"> Ruoff </span> </h1>
 	<p>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">		
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/infernape.gif">
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
 		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
 		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 	</p>
