Added breaks to space out the sprites

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		<span class="black-bg"> Christopher </span> 
 			<span class="red-bg"> Ruoff </span> </h1>
 	<p>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">		
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif"> <br>		
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif"> <br>
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif"> <br>
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif"> <br>
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif"> <br>
+		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif"> <br>
 	</p>
 </body>
 </html>
