Added Zenyatta emote for Logan

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif"> <br>
 		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif"> <br>
 		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif"> <br>
+		<img src="https://vignette.wikia.nocookie.net/overwatch/images/f/f0/Zenyatta_emote_heroic.gif/revision/latest?cb=20160829120801"> <br>
 	</p>
 </body>
 </html>
