--- a/index.html
+++ b/index.html
@@ -5,19 +5,55 @@
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
-<body class="center-whole">
+<body>
 
 	<h1> <span class="blue-bg"> Brandon </span> 
 		<span class="black-bg"> Christopher </span> 
 			<span class="red-bg"> Ruoff </span> </h1>
-	<p>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif"> <br>		
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif"> <br>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif"> <br>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif"> <br>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif"> <br>
-		<img class="pokemon" src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif"> <br>
-		<img src="https://vignette.wikia.nocookie.net/overwatch/images/f/f0/Zenyatta_emote_heroic.gif/revision/latest?cb=20160829120801"> <br>
+	<h1> Pokemon </h2>
+	<h2 class="white-text"> My Main Team </h2>
+	<p class="center-whole">
+			
+		<span class="yellow-text"> Galvantula </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif"> <br>	
+		<span class="purple-text"> Noivern </span>	
+		<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif"> <br>
+		<span class="red-text"> Rotom-Heat </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif"> <br>
+		<span class="turquoise-text"> Klinklang </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif"> <br>
+		<span class="pink-text"> Sylveon </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif"> <br>
+		<span class="white-text"> Mega Medicham </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif"> <br>
 	</p>
+	<h2 class="center-whole"> Overwatch </h2>
+	<p>
+		<!-- Logan's Overwatch characters -->
+		Jeremiyah: <span class="gray-text"> </span>
+		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
+		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3e/Icon-tracer.png?version=fab76eb00269bd7492263c46982e8c72">
+		<img class="overwatch-tank"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
+		<br><br><br><br><br><br><br><br>
+	</p>	
+	<p>
+		<!-- Logan's Overwatch characters -->
+		Logan: <span class="red-text"> </span>
+		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
+		<img class="overwatch-tank"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
+		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288"> 
+		<br><br><br><br><br><br><br><br>
+	</p>
+	<p>
+		<!-- Brandon's Overwatch characters -->
+		Brandon: <span class="yellow-text"> Support </span>
+		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">
+		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
+		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d"> <br>
+	</p>
+		
+		
+	</p>
+	
 </body>
 </html>
