Made small correction

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<br><br><br><br><br><br><br><br>
 	</p>	
 	<p>
-		<!-- Logan's Overwatch characters -->
+		<!-- Joshuah's Overwatch characters -->
 		Joshuah: <span class="red-text"> </span>
 		<img class="overwatch-defense"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">
@@ -45,7 +45,7 @@
 		<br><br><br><br><br><br><br><br>
 	</p>	
 	<p>
-		<!-- Logan's Overwatch characters -->
+		<!-- Jeremiyah's Overwatch characters -->
 		Logan: <span class="red-text"> </span>
 		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
 		<img class="overwatch-tank"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
