Added another Pokemon team and better formatting

--- a/index.html
+++ b/index.html
@@ -13,51 +13,70 @@
 	<h1> Pokemon </h2>
 	<h2 class="white-text"> My Main Team </h2>
 	<p class="center-whole">
-			
 		<span class="yellow-text"> Galvantula </span>
-		<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif"> <br>	
+		<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">	
 		<span class="purple-text"> Noivern </span>	
-		<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif"> <br>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/noivern.gif">
 		<span class="red-text"> Rotom-Heat </span>
-		<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif"> <br>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/rotom-heat.gif">
 		<span class="turquoise-text"> Klinklang </span>
-		<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif"> <br>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/klinklang.gif">
 		<span class="pink-text"> Sylveon </span>
-		<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif"> <br>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/sylveon.gif">
 		<span class="white-text"> Mega Medicham </span>
-		<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif"> <br>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/medicham-mega.gif">
 	</p>
-	<h2 class="center-whole"> Overwatch </h2>
+	<h2 class="white-text"> The Sand Gym Team </h2>
+	<p class="center-whole">
+		<span class="tan-text"> Hippowdon </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/hippowdon.gif">	
+		<span class="pink-text"> Gastrodon </span>	
+		<img src="http://www.smogon.com/dex/media/sprites/xy/gastrodon.gif">
+		<span class="maroon-text"> Excadrill </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/excadrill.gif">
+		<span class="purple-text"> Nidoking </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/nidoking.gif">
+		<span class="lavender-text"> Gliscor </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/gliscor.gif">
+		<span class="navy-text"> Mega Garchomp </span>
+		<img src="http://www.smogon.com/dex/media/sprites/xy/garchomp-mega.gif">
+	</p>
+
+	
+	<br>
+	
+	<h1 class="center-whole"> Overwatch </h1>
 	<p>
-		<!-- Logan's Overwatch characters -->
-		Jeremiyah: <span class="gray-text"> </span>
+		<!-- Jeremiyah's Overwatch characters -->
+		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> DPS </span>
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3e/Icon-tracer.png?version=fab76eb00269bd7492263c46982e8c72">
-		<img class="overwatch-tank"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
-		<br><br><br><br><br><br><br><br>
+		<img class="overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
+		<br><br><br><br><br><br><br>
 	</p>	
 	<p>
 		<!-- Joshuah's Overwatch characters -->
-		Joshuah: <span class="red-text"> </span>
+		Joshuah: <span class="turquoise-text"> Tank </span>/ <span class="red-text"> DPS </span>
 		<img class="overwatch-defense"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">
-		<img class="overwatch-tank"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248"> 
-		<br><br><br><br><br><br><br><br>
+		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248"> 
+		<br><br><br><br><br><br><br>
 	</p>	
 	<p>
-		<!-- Jeremiyah's Overwatch characters -->
-		Logan: <span class="red-text"> </span>
-		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
-		<img class="overwatch-tank"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
+		<!-- Logan's Overwatch characters -->
+		Logan: <span class="red-text"> DPS </span> / <span class="yellow-text"> Support </span>
+		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
+		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288"> 
-		<br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br>
 	</p>
 	<p>
 		<!-- Brandon's Overwatch characters -->
 		Brandon: <span class="yellow-text"> Support </span>
-		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">
+		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">
 		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
-		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d"> <br>
+		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d"> 
+		<br><br><br><br><br><br>
 	</p>
 		
 		
