Added box padding to title

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-	<h1> <span class="blue-bg"> Brandon </span> 
-		<span class="black-bg"> Christopher </span> 
-			<span class="red-bg"> Ruoff </span> </h1>
+	<h1> <span class="blue-bg extra-box-padding"> Brandon </span> 
+		<span class="black-bg extra-box-padding"> Christopher </span> 
+			<span class="red-bg extra-box-padding"> Ruoff </span> </h1>
 	<h1> Pokemon </h2>
 	<h2 class="white-text"> My Main Team </h2>
 	<p class="center-whole">
