Added two open spaces in Overwatch team

--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
 	
 	<h1 class="center-whole"> Overwatch </h1>
 	<p>
+		<!-- Logan's Overwatch characters -->
+		Logan: <span class="red-text"> DPS </span>
+		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
+		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
+		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288"> 
+		<br><br><br><br><br><br><br>
+	</p>
+	<p>
+		<!-- ???s's Overwatch characters -->
+		??? : <span class="red-text"> DPS </span>
+		<img class="overwatch-dps"; src="">
+		<img class="overwatch-dps"; src="">
+		<img class="overwatch-dps"; src=""> 
+		<br><br><br><br><br><br><br>
+	</p>
+	<p>
 		<!-- Jeremiyah's Overwatch characters -->
 		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> DPS </span>
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
@@ -56,18 +72,18 @@
 	</p>	
 	<p>
 		<!-- Joshuah's Overwatch characters -->
-		Joshuah: <span class="turquoise-text"> Tank </span>/ <span class="red-text"> DPS </span>
+		Joshuah: <span class="lavender-text"> Off-Tank </span>
 		<img class="overwatch-defense"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/95/Icon-doomfist.png?version=4bf9a60fe55a68350567d31762d3d0b6">
 		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248"> 
 		<br><br><br><br><br><br><br>
-	</p>	
+	</p>
 	<p>
-		<!-- Logan's Overwatch characters -->
-		Logan: <span class="red-text"> DPS </span> / <span class="yellow-text"> Support </span>
-		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
-		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/16/Icon-Roadhog.png?version=7be71e3c48941c3f2415a12d15335e40">
-		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288"> 
+		<!-- ???s's Overwatch characters -->
+		??? : <span class="yellow-text"> Support </span>
+		<img class="overwatch-healer"; src="">
+		<img class="overwatch-healer"; src="">
+		<img class="overwatch-healer"; src=""> 
 		<br><br><br><br><br><br><br>
 	</p>
 	<p>
