Added buttons for my interests

--- a/index.html
+++ b/index.html
@@ -5,3 +5,13 @@
 	<link rel="stylesheet" href="styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
+	<h1> <span class="blue-bg extra-box-padding"> Brandon </span> 
+		<span class="black-bg extra-box-padding"> Christopher </span> 
+			<span class="red-bg extra-box-padding"> Ruoff </span> </h1>
+	<p class="center-whole">
+		<span class="gray-button"> Computer Science </a> </span>
+		<span class="gray-button"> Pokemon </a> </span>
+		<span class="gray-button"> Overwatch </a> </span>
+		<span class="gray-button"> Piano </a> </span>
+		<span class="gray-button"> Art </a> </span>
+	</p>
