--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
-	<h1> <span class="blue-bg extra-box-padding"> Brandon </span> 
-		<span class="black-bg extra-box-padding"> Christopher </span> 
-			<span class="red-bg extra-box-padding"> Ruoff </span> </h1>
+	<h1> Brandon C. Ruoff <h1>
 	<p class="center-whole">
 		<span class="gray-button"> Computer Science </a> </span>
 		<span class="gray-button"> Pokemon </a> </span>
