Added back the mobile formatting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Brandon's Webpage</title>
 	<link rel="stylesheet" href="styles.css">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 	<h1> Brandon C. Ruoff <h1>
 	<p class="center-whole">
