--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 	<h1> Brandon C. Ruoff <h1>
 	<p class="center-whole">
-		<span class="gray-button"> Computer Science </a> </span>
-		<span class="gray-button"> Pokemon </a> </span>
-		<span class="gray-button"> Overwatch </a> </span>
-		<span class="gray-button"> Piano </a> </span>
-		<span class="gray-button"> Art </a> </span>
+		<span class="gray-button"> <a href="brandonruoff8.github.io/computer-science"> Computer Science </a> </span>
+		<span class="gray-button"> <a href="brandonruoff8.github.io/pokemon"> Pokemon </a> </span>
+		<span class="gray-button"> <a href="brandonruoff8.github.io/overatch"> Overwatch </a> </span>
+		<span class="gray-button"> <a href="brandonruoff8.github.io/piano"> Piano </a> </span>
+		<span class="gray-button"> <a href="brandonruoff8.github.io/art"> Art </a> </span>
 	</p>
