Changed file directory to make links work correctly

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 	<h1> Brandon C. Ruoff <h1>
 	<p class="center-whole">
-		<span class="gray-button"> <a href="brandonruoff8.github.io/computer-science"> Computer Science </a> </span>
-		<span class="gray-button"> <a href="brandonruoff8.github.io/pokemon"> Pokemon </a> </span>
-		<span class="gray-button"> <a href="brandonruoff8.github.io/overatch"> Overwatch </a> </span>
-		<span class="gray-button"> <a href="brandonruoff8.github.io/piano"> Piano </a> </span>
-		<span class="gray-button"> <a href="brandonruoff8.github.io/art"> Art </a> </span>
+		<span class="gray-button"> <a href="sub-cites/computer-science.html"> Computer Science </a> </span>
+		<span class="gray-button"> <a href="sub-cites/pokemon.html"> Pokemon </a> </span>
+		<span class="gray-button"> <a href="sub-cites/overwatch.html"> Overwatch </a> </span>
+		<span class="gray-button"> <a href="sub-cites/piano.html"> Piano </a> </span>
+		<span class="gray-button"> <a href="sub-cites/art.html"> Art </a> </span>
 	</p>
