Added the piano section

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Brandon's Pokemon Page</title>
-	<link rel="stylesheet" href="pokemon-styles.css">
+	<link rel="stylesheet" href="sub-styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
 <body>
