--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brandon's Pokemon Page</title>
-	<link rel="stylesheet" href="pokemon-styles.css">
+	<title>Brandon's Overwatch Page</title>
+	<link rel="stylesheet" href="sub-styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
 </head>
 <body>
