Added 'Back' buttons

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brandon's Webpage</title>
+	<title> Brandon's Webpage </title>
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
+<body>
 	<h1> Brandon C. Ruoff <h1>
 	<p class="center-whole">
-		<span class="gray-button"> <a href="sub-cites/computer-science.html"> Computer Science </a> </span>
-		<span class="gray-button"> <a href="sub-cites/pokemon.html"> Pokemon </a> </span>
-		<span class="gray-button"> <a href="sub-cites/overwatch.html"> Overwatch </a> </span>
-		<span class="gray-button"> <a href="sub-cites/piano.html"> Piano </a> </span>
-		<span class="gray-button"> <a href="sub-cites/art.html"> Art </a> </span>
+		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
+		<a href="sub-cites/pokemon.html" class="gray-button">  Pokemon </a>
+		<a href="sub-cites/overwatch.html" class="gray-button">  Overwatch </a>
+		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
+		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
 	</p>
+</body>
+</html>
