--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -6,16 +6,16 @@
 	function goBack() {
 		window.history.back();
 	}
-	</script>	
-	<title>Brandon's Piano Page</title>
+	</script>
+	<title>Brandon's CS Page</title>
 	<link rel="stylesheet" href="sub-styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<h1> Piano </h2>
+	<h1> Computer Science </h2>
 	<br>
-	<h2 class="white-text"> Sheet Music I Made Based on Existing Songs </h2>
-	<p class="center-whole"> * <a href="Ark_Death_Theme.pdf"> Ark Death Theme </a> 
+	<h2 class="white-text"> <a href="https://github.com/brandonruoff8">  GitHub </a> </h2>
+	<p class="center-whole">
 	</p>
 </body>
 </html>
