--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<button class="gray-button" onclick="goBack()"> Back </button>
+	<script>
+	function goBack() {
+		window.history.back();
+	}
+	</script>
 	<title>Brandon's Overwatch Page</title>
 	<link rel="stylesheet" href="sub-styles.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
