Improved Overwatch page

--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<h1 class="center-whole"> Overwatch </h1>
-	<p>
+	<p class="red-outline">
 		<!-- Logan's Overwatch characters -->
 		Logan: <span class="red-text"> DPS </span>
 		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d">
@@ -21,7 +21,7 @@
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/f/f3/Icon-pharah.png?version=65e77903992391a8f9499c9a4edf4288"> 
 		<br><br><br><br><br><br><br>
 	</p>
-	<p>
+	<p class="red-outline">
 		<!-- ???s's Overwatch characters -->
 		??? : <span class="red-text"> DPS </span>
 		<img class="overwatch-dps"; src="">
@@ -29,7 +29,7 @@
 		<img class="overwatch-dps"; src=""> 
 		<br><br><br><br><br><br><br>
 	</p>
-	<p>
+	<p class="blue-outline">
 		<!-- Jeremiyah's Overwatch characters -->
 		Jeremiyah: <span class="turquoise-text"> Tank </span> / <span class="red-text"> DPS </span>
 		<img class="overwatch-dps"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/1/10/Icon-Soldier76.png?version=cc1fcbd8a1d814429f51c033422cd925">
@@ -37,7 +37,7 @@
 		<img class="overwatch-tank-main"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/2/28/Icon-winston.png?version=cd403f19c5ac9ac4ed0d41f41cc34dcc"> 
 		<br><br><br><br><br><br><br>
 	</p>	
-	<p>
+	<p class="blue-outline">
 		<!-- Joshuah's Overwatch characters -->
 		Joshuah: <span class="lavender-text"> Off-Tank </span>
 		<img class="overwatch-defense"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/b/b1/Icon-hanzo.png?version=ebf7609cb8525e454bfac5511a804310">
@@ -45,7 +45,7 @@
 		<img class="overwatch-tank-off"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/a/a1/Icon-dva.png?version=fee2e13423f50ce58ea0bab606fe2248"> 
 		<br><br><br><br><br><br><br>
 	</p>
-	<p>
+	<p class="yellow-outline">
 		<!-- ???s's Overwatch characters -->
 		??? : <span class="yellow-text"> Support </span>
 		<img class="overwatch-healer"; src="">
@@ -53,13 +53,17 @@
 		<img class="overwatch-healer"; src=""> 
 		<br><br><br><br><br><br><br>
 	</p>
-	<p>
+	<p class="yellow-outline">
 		<!-- Brandon's Overwatch characters -->
-		Brandon: <span class="yellow-text"> Support </span>
-		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">
+		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/7/7d/Icon-moira.png?version=acf108ced9c432145dbbeccdb6d0b080">
 		<img class="overwatch-healer"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/3/3d/Icon-mercy.png?version=574083f23858ef8b7de5a3b96f49cc8e">
 		<img class="overwatch-dps-heal"; src="https://d1u5p3l4wpay3k.cloudfront.net/overwatch_gamepedia/9/91/Icon-zenyatta.png?version=7592d21fce23823e4ee7fbed6154c49d"> 
-		<br><br><br><br><br><br>
+		Brandon: <span class="yellow-text"> Support </span> <br> <br>
+		My name is Brandon C. Ruoff. I am busy in college, but I find the time to play Xbox when I can. My favorite character is <br>
+		actually Tracer, but I prefer to support my teammates in the pursuit of victory because of my selfless personality. <br>
+		It is due to this trait that I excel at monitoring my teammates' health and know when I should lend someone more damage in <br>
+		order to penetrate the enemy team. I prefer to play Zenyatta, but I will never hesitate to play Mercy when she is needed.
+		<br> <br>
 	</p>
 		
 		
