--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -7,15 +7,14 @@
 		window.history.back();
 	}
 	</script>	
-	<title>Brandon's Piano Page</title>
+	<title> Brandon's Art Page </title>
 	<link rel="stylesheet" href="sub-styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<h1> Piano </h1>
-	<br>
-	<h2 class="white-text"> Sheet Music I Made Based on Existing Songs </h2>
-	<p class="center-whole"> * <a href="Ark_Death_Theme.pdf"> Ark Death Theme </a> 
+	<h1> Art <h1>
+	<h2 class="white-text"> No art posted yet... </h2>
+	<p class="center-whole">
 	</p>
 </body>
 </html>
