Fixed back buttons

--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<button class="gray-button" onclick="goBack()"> Back </button>
-	<script>
-	function goBack() {
-		window.history.back();
-	}
-	</script>	
+	<a href="../index.html" class="gray-button"> Back </a>	
 	<title> Brandon's Art Page </title>
 	<link rel="stylesheet" href="sub-styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
