--- a/sub-cites/overwatch.html
+++ b/sub-cites/overwatch.html
@@ -4,7 +4,7 @@
 	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's Overwatch Page</title>
 	<link rel="stylesheet" href="sub-styles.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
+	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
 	<h1 class="center-whole"> Overwatch </h1>
