--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -4,7 +4,7 @@
 	<a href="../index.html" class="gray-button"> Back </a>
 	<title>Brandon's Pokemon Page</title>
 	<link rel="stylesheet" href="sub-styles.css">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"> -->
+	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
 	<h1> Pokemon </h2>
