--- a/sub-cites/piano.html
+++ b/sub-cites/piano.html
@@ -10,7 +10,7 @@
 	<h1> Piano </h1>
 	<br>
 	<h2 class="white-text"> Sheet Music I Made Based on Existing Songs </h2>
-	<p class="center-whole"> * <a href="Ark_Death_Theme.pdf"> Ark Death Theme </a> 
+	<p class="center-whole"> * <a href="piano/Ark_Death_Theme.pdf"> Ark Death Theme </a> 
 	</p>
 </body>
 </html>
