--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -10,9 +10,17 @@
 	<h1> Computer Science </h2>
 	<br>
 	<h2 class="white-text"> <a href="https://github.com/brandonruoff8">  GitHub </a> </h2>
+	<p class="center-whole"> 
+		View my Github account where I can share my programs with the world!
 	<h2 class="white-text"> <a href="computer-science/hello_world_runnable.jar" download> Hello world! </a> </h2>
+	<p class="center-whole"> 
+		Simply said, this download, when opened or run, will make a window pop up that says "Hello!" It was my test to see if 
+		I could post executable code on my website for other people to try.
+	<h2 class="white-text"> <a href="computer-science/pokemon_battle.jar" download> Pokemon Battle </a> </h2>
 	<p class="center-whole">
-		
+		This is a program I have been working on for a while. Currently the link does not work because of the 
+		way I originally coded it, but I aim to change that and make it possible for everyone to try
+		out the game by simply downloading the .jar file.
 	</p>
 </body>
 </html>
