Added mini calculator and changed links

--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -9,18 +9,37 @@
 <body>
 	<h1> Computer Science </h2>
 	<br>
-	<h2 class="white-text"> <a href="https://github.com/brandonruoff8">  GitHub </a> </h2>
+	<h3> <a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a> </h3>
 	<p class="center-whole"> 
 		View my Github account where I can share my programs with the world!
-	<h2 class="white-text"> <a href="computer-science/hello_world_runnable.jar" download> Hello world! </a> </h2>
+	<h2 class="gray-text">
+		Projects:
+	</h2>
+	<p class="center-whole">
+		The following are some of the projects I have worked on. It is definitely not an exhaustive list of them, but
+		it includes some of the ones that use some sort of frame that is user-friendly. To try one, simply click on the blue link
+		and run it.
+	<h3> <a href="computer-science/hello_world_runnable.jar" download class="gray-button"> Hello world! </a> </h3>
 	<p class="center-whole"> 
 		Simply said, this download, when opened or run, will make a window pop up that says "Hello!" It was my test to see if 
 		I could post executable code on my website for other people to try.
-	<h2 class="white-text"> <a href="computer-science/pokemon_battle.jar" download> Pokemon Battle </a> </h2>
+	<h3> <a href="computer-science/pokemon_battle.jar" download class="gray-button"> Pokemon Battle </a> </h3>
+	<p class="center-whole red-text">
+		Currently the link does not work because I initially coded it using the console output instead of a window.
+	</p>
 	<p class="center-whole">
-		This is a program I have been working on for a while. Currently the link does not work because of the 
-		way I originally coded it, but I aim to change that and make it possible for everyone to try
-		out the game by simply downloading the .jar file.
+		I know a lot about Pokemon, so I am attempting to build a simple battle simulator. It includes a variety of Pokemon to
+		choose from to create a full party of 6 Pokemon. The player faces off against an AI that represents me. Currently only
+		damage is implemented--status moves, special effects of moves, and abilities will come later.
+	</p>
+	<h3> <a href="computer-science/mini_calculator.jar" download class="gray-button"> Mini Calculator </a> </h3>
+	<p class="center-whole">
+		I built a simple Calculator program build from JFrame for one of my classes. It can take two numbers as input at a time in the following
+		format: 
+		</br></br>
+		[integer1][function][integer2] (for example: 22+8)
+		</br></br>
+		It cannot use decimals as an input, but the division function will in fact supply a decimal answer.
 	</p>
 </body>
 </html>
