--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -37,7 +37,9 @@
 		I built a simple Calculator program build from JFrame for one of my classes. It can take two numbers as input at a time in the following
 		format: 
 		</br></br>
-		[integer1][function][integer2] (for example: 22+8)
+		[integer1][function][integer2]
+		</br>
+		(for example: 22+8)
 		</br></br>
 		It cannot use decimals as an input, but the division function will in fact supply a decimal answer.
 	</p>
