Changed some wording

--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -17,11 +17,11 @@
 	</h2>
 	<p class="center-whole">
 		The following are some of the projects I have worked on. It is definitely not an exhaustive list of them, but
-		it includes some of the ones that use some sort of frame that is user-friendly. To try one, simply click on the blue link
+		it includes some of the ones that use some sort of frame that is user-friendly. To try one, simply click on the buttons
 		and run it.
 	<h3> <a href="computer-science/hello_world_runnable.jar" download class="gray-button"> Hello world! </a> </h3>
 	<p class="center-whole"> 
-		Simply said, this download, when opened or run, will make a window pop up that says "Hello!" It was my test to see if 
+		Simply said, this download will make a window pop up that says "Hello!" It was my test to see if 
 		I could post executable code on my website for other people to try.
 	<h3> <a href="computer-science/pokemon_battle.jar" download class="gray-button"> Pokemon Battle </a> </h3>
 	<p class="center-whole red-text">
