Added to front page and slightly modified pokemon_battle.jar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-	<h1> Brandon C. Ruoff <h1>
+	<h1> Brandon C Ruoff <h1>
+
 	<p class="center-whole">
 		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
 		<a href="sub-cites/pokemon.html" class="gray-button">  Pokemon </a>
@@ -14,7 +15,16 @@
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
 	</p>
-	<img src="https://scontent.fcps1-1.fna.fbcdn.net/v/t1.0-1/p240x240/24129913_1782312491780135_1751515964843666525_n.jpg?oh=4565f694f06a9818fb9b685aa8ec0c04&oe=5B0AED0B"
-	class="profile-pic">
+	<p> <img src="https://scontent.fcps1-1.fna.fbcdn.net/v/t1.0-1/p240x240/24129913_1782312491780135_1751515964843666525_n.jpg?oh=4565f694f06a9818fb9b685aa8ec0c04&oe=5B0AED0B"
+		class="profile-pic">
+	</p>
+	<h2 class="center-whole white-text">
+		Contact me:
+	</h2>
+	<p class="center-whole white-text">
+	E-mail: brandoru15@gmail.com <br>
+	Cell Phone: (816) 447-2270
+	</p>
+	
 </body>
 </html>
