Fixed accents on "e"s

--- a/sub-cites/pokemon.html
+++ b/sub-cites/pokemon.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<a href="../index.html" class="gray-button"> Back </a>
-	<title>Brandon's Pokemon Page</title>
+	<title>Brandon's Pok&eacute;mon Page</title>
 	<link rel="stylesheet" href="sub-styles.css">
 	<!-- meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no" -->
 </head>
 <body>
-	<h1> Pokemon </h2>
+	<h1> Pok&eacute;mon </h2>
 	<br>
-	<h2 class="white-text"> My Main Team </h2>
+	<h2 class="white-text"> The Main Team </h2>
 	<p class="center-whole">
 		<span class="yellow-text"> Galvantula </span>
 		<img src="http://www.smogon.com/dex/media/sprites/xy/galvantula.gif">	
