--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<p class="center-whole">
 		<a href="sub-cites/computer-science.html" class="gray-button" > Computer Science </a>
-		<a href="sub-cites/pokemon.html" class="gray-button">  Pokemon </a>
+		<a href="sub-cites/pokemon.html" class="gray-button">  Pok&eacute;mon </a>
 		<a href="sub-cites/overwatch.html" class="gray-button">  Overwatch </a>
 		<a href="sub-cites/piano.html" class="gray-button"> Piano </a>
 		<a href="sub-cites/art.html" class="gray-button"> Art </a> 
