Modified pokemon_battle.jar significantly

--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -25,7 +25,7 @@
 		I could post executable code on my website for other people to try.
 	<h3> <a href="computer-science/pokemon_battle.jar" download class="gray-button"> Pokemon Battle </a> </h3>
 	<p class="center-whole red-text">
-		Currently the link does not work because I initially coded it using the console output instead of a window.
+		The link will now work. However, the game is still incomplete.
 	</p>
 	<p class="center-whole">
 		I know a lot about Pokemon, so I am attempting to build a simple battle simulator. It includes a variety of Pokemon to
