Added Minecraft MK7 page in Art section

--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -17,7 +17,7 @@
 	</h2>
 	<p class="center-whole">
 		The following are some of the projects I have worked on. It is definitely not an exhaustive list of them, but
-		it includes some of the ones that use some sort of frame that is user-friendly. To try one, simply click on the buttons
+		it includes some of the ones that use some sort of frame that is user-friendly. To try one, simply click on the button
 		and run it.
 	<h3> <a href="computer-science/hello_world_runnable.jar" download class="gray-button"> Hello world! </a> </h3>
 	<p class="center-whole"> 
