--- a/sub-cites/art.html
+++ b/sub-cites/art.html
@@ -8,8 +8,16 @@
 </head>
 <body>
 	<h1> Art <h1>
-	<h2 class="white-text"> No art posted yet... </h2>
+	<h2 class="white-text"> <a href="art/minecraftmk7.html"> Minecraft - Mario Kart 7 Rainbow Road </h2>
 	<p class="center-whole">
+		<img class="minecraft-mk7"; src="art/minecraftmk7/20180319-001.jpg" >
+	</p>
+	</a>
+	
+	<h2 class="white-text"> Door Decorations </h2>
+	<p class="center-whole">
+		<img class="minecraft-mk7"; src="art/doordecs/tracerdd.jpg" >
+		<img class="minecraft-mk7"; src="art/doordecs/ssbmiidd.jpg" >
 	</p>
 </body>
 </html>
