--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -23,7 +23,7 @@
 	<p class="center-whole"> 
 		Simply said, this download will make a window pop up that says "Hello!" It was my test to see if 
 		I could post executable code on my website for other people to try.
-	<h3> <a href="computer-science/pokemon_battle.jar" download class="gray-button"> Pokemon Battle </a> </h3>
+	<h3> <a href="computer-science/pokemon-battle.html" class="gray-button"> Pok&eacute;mon Battle </a> </h3>
 	<p class="center-whole red-text">
 		The link will now work. However, the game is still incomplete.
 	</p>
