Fixed music links

--- a/sub-cites/computer-science/pokemon-battle.html
+++ b/sub-cites/computer-science/pokemon-battle.html
@@ -20,11 +20,11 @@
 	* Title the folder "music" <br>
 	* Make sure the folder is in the same location as the .jar file (above)
 	</p>
-	<h3> <a href="KalosWelcomeTheme.wav" download class="gray-button"> KalosWelcomeTheme.wav </a> </h3>
-	<h3> <a href="MagmaColosseumPokemonBattleRevolution.wav" download class="gray-button"> MagmaColosseumPokemonBattleRevolution.wav </a> </h3>
-	<h3> <a href="PokemonORASChampionTheme.wav" download class="gray-button"> PokemonORASChampionTheme.wav </a> </h3>
-	<h3> <a href="PokemonXandYChampionTheme.wav" download class="gray-button"> PokemonXandYChampionTheme.wav </a> </h3>
-	<h3> <a href="TellurTownAutumnPokkenTournament.wav" download class="gray-button"> TellurTownAutumnPokkenTournament.wav </a> </h3>
-	<h3> <a href="TotemPokemonSunAndMoon.wav" download class="gray-button"> TotemPokemonSunAndMoon.wav </a> </h3>
+	<h3> <a href="pokemon-battle/music/KalosWelcomeTheme.wav" download class="gray-button"> KalosWelcomeTheme.wav </a> </h3>
+	<h3> <a href="pokemon-battle/music/MagmaColosseumPokemonBattleRevolution.wav" download class="gray-button"> MagmaColosseumPokemonBattleRevolution.wav </a> </h3>
+	<h3> <a href="pokemon-battle/music/PokemonORASChampionTheme.wav" download class="gray-button"> PokemonORASChampionTheme.wav </a> </h3>
+	<h3> <a href="pokemon-battle/music/PokemonXandYChampionTheme.wav" download class="gray-button"> PokemonXandYChampionTheme.wav </a> </h3>
+	<h3> <a href="pokemon-battle/music/TellurTownAutumnPokkenTournament.wav" download class="gray-button"> TellurTownAutumnPokkenTournament.wav </a> </h3>
+	<h3> <a href="pokemon-battle/music/TotemPokemonSunAndMoon.wav" download class="gray-button"> TotemPokemonSunAndMoon.wav </a> </h3>
 </body>
 </html>
