Added practice javascript file

--- a/sub-cites/computer-science.html
+++ b/sub-cites/computer-science.html
@@ -16,16 +16,15 @@
 		Projects:
 	</h2>
 	<p class="center-whole">
-		The following are some of the projects I have worked on. It is definitely not an exhaustive list of them, but
-		it includes some of the ones that use some sort of frame that is user-friendly. To try one, simply click on the button
-		and run it.
+		The following are some of the projects I have worked on. It is definitely not an exhaustive list of everything I have
+		done.
 	<h3> <a href="computer-science/hello_world_runnable.jar" download class="gray-button"> Hello world! </a> </h3>
 	<p class="center-whole"> 
 		Simply said, this download will make a window pop up that says "Hello!" It was my test to see if 
 		I could post executable code on my website for other people to try.
-	<h3> <a href="computer-science/pokemon-battle.html" class="gray-button"> Pok&eacute;mon Battle </a> </h3>
+	<h3> <a href="" class="gray-button"> Pok&eacute;mon Battle </a> </h3>
 	<p class="center-whole red-text">
-		The link will now work. However, the game is still incomplete.
+		The game is still incomplete.
 	</p>
 	<p class="center-whole">
 		I know a lot about Pokemon, so I am attempting to build a simple battle simulator. It includes a variety of Pokemon to
