--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 	<title> Brandon's Webpage </title>
 	<link rel="stylesheet" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
+	<script type="text/javascript">
+		var imageNum = 0;
+		
+		function change()
+		{
+			var image = document.getElementById("imageId");
+			if(imageNum == 0)
+			{
+				image.src = 'https://ih0.redbubble.net/image.98538055.2991/flat,1000x1000,075,f.u1.jpg';
+				imageNum = 1;
+			}
+			else if(imageNum == 1)
+			{
+				image.src = 'https://wiki.gamedetectives.net/images/b/bf/Overwatch_logo.jpg';
+				imageNum = 0;
+			}	
+		}
+		
+		var timer = setInterval('change()', 2000);
+	</script>
 </head>
 <body>
 	<h1> Brandon C Ruoff <h1>
@@ -18,6 +38,7 @@
 	<p> <img src="https://scontent.fcps1-1.fna.fbcdn.net/v/t1.0-1/p240x240/24129913_1782312491780135_1751515964843666525_n.jpg?oh=4565f694f06a9818fb9b685aa8ec0c04&oe=5B0AED0B"
 		class="profile-pic">
 	</p>
+	<img width="100px" id="imageId" src="https://wiki.gamedetectives.net/images/b/bf/Overwatch_logo.jpg" >
 	<h2 class="center-whole white-text">
 		Contact me:
 	</h2>
