--- a/sub-cites/firstjavascript.html
+++ b/sub-cites/firstjavascript.html
@@ -73,7 +73,7 @@
 	</form>
 	<p id="response"> </p>
 	<img width="100px" id="imageId" src="https://wiki.gamedetectives.net/images/b/bf/Overwatch_logo.jpg" >
-	<form action="game.html" method="post" onsubmit="return check_info();">
+	<form action="game.html" method="get" onsubmit="return check_info();">
 		Username: <input type="text" name="username" id="username"/><br/>
 		Password: <input type="password" name="password" id="password"/><br/>
 		<input type="submit" value="Login"/><br/>
