--- a/sub-cites/game.html
+++ b/sub-cites/game.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
+	<a href="../index.html" class="gray-button"> Back </a>
     <title>Brandon Secret Page</title>
+	<link rel="stylesheet" href="sub-styles.css">
 	<center>
 	<h1> SECRET WEBPAGE OF BRANDON RUOFF </h1>
 	</center>
@@ -21,11 +23,60 @@
 	var ctx = canvas.getContext("2d");
 	var colorNum = 0;
 	var colorArray = ["red", "orange", "yellow", "green", "blue", "violet"];
-	var x = 0;
-	var dx = 1;
-	var y = 0;
-	var dy = 1;
+	var x = 100;
+	var y = 100;
 	var radius = 10;
+	var direction = "";
+	
+	document.addEventListener("keydown", keyDownListener, false);
+	
+	function keyDownListener(e) 
+	{
+		if(e.keyCode == 37) 
+		{
+			direction = "left";
+		}
+		if(e.keyCode == 38) 
+		{
+			direction = "up";
+		}
+		if(e.keyCode == 39) 
+		{	
+			direction = "right";
+		}
+		if(e.keyCode == 40)
+		{
+			direction = "down";
+		}
+	}
+	
+	/*
+	function keyUpListener(e) 
+	{
+		if(e.keyCode == 37) 
+		{
+			leftPressed = false;
+		}
+		if(e.keyCode == 38) 
+		{
+			upPressed = false;
+		}
+		if(e.keyCode == 39) 
+		{
+			rightPressed = false;
+		}
+		if(e.keyCode == 40)
+		{
+			downPressed = false;
+		}
+	}
+	*/
+	
+	function draw ()
+	{
+		draw_circle();
+		move();
+	}
 	
 	function draw_circle()
 	{
@@ -48,30 +99,26 @@
 	
 	function move()
 	{
-		x = x + dx;
-		y = y + dy;
-		if(x + radius >= canvas.width)
+		if(direction=="left" && (x - radius >= 0))
 		{
-			dx = -1;
+			x = x - 2;
 		}
-		else if(x - radius <= 0)
+		else if(direction=="up" && (y - radius >= 0))
 		{
-			dx = 1;
+			y = y - 2;
 		}
-		if(y + radius >= canvas.height)
+		else if(direction=="right" && (x + radius <= canvas.width))
 		{
-			dy = -1;
+			x = x + 2;
 		}
-		else if(y - radius <= 0)
+		else if(direction=="down" && (y + radius <= canvas.height))
 		{
-			dy = 1;
+			y = y + 2;
 		}
 	}
 	
-	
-	var drawTimer = setInterval('draw_circle()', 10);
-	var moveTimer = setInterval('move()', 10);
-	var colorTimer = setInterval('changeColor()', 500);
+	var drawTimer = setInterval('draw()', 5);
+	var colorTimer = setInterval('changeColor()', 400);
 </script>
 
 </body>
